reordering the code

--- a/Code/InterviewTests/InterviewTests.csproj
+++ b/Code/InterviewTests/InterviewTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Code\InterviewBenchmark.csproj" />
+    <ProjectReference Include="..\InterviewBenchmark\InterviewBenchmark.csproj" />
   </ItemGroup>
 
   <ItemGroup>
